--- a/webserver.yml
+++ b/webserver.yml
@@ -6,10 +6,21 @@
     package:
       name: httpd
       state: present
+    notify: apache is installed
   - name: ensure httpd is running
     service:
       name: httpd
       state: started
+  - name: Template index.html.j2 to index.html on target
+    template:
+      src: templates/index.html.j2
+      dest: /var/www/html/index.html
+      mode: 0644
+  - name: restart apache
+    service:
+      name: httpd
+      state: restarted
+    notify: Check HTTP Service
   - name: open port 80 for httpd access
     firewalld:
       service: http
@@ -19,3 +30,8 @@
     service:
       name: firewalld
       state: restarted
+  handlers:
+    - name: Check HTTP Service
+      uri:
+        url: http://{{ ansible_default_ipv4.address }}
+        status_code: 200
